--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+.middle{
+	border:1px solid black;
+	width:100%;
+	margin-bottom:20px;
+	border-spacing:1px;
+}
+td{
+	padding:1px;
+	border:1px solid black;
+	/* width:10px; */
+	height:10px;
+}
+#bg-blue{
+	background-color:blue;
+	
+}
+#img-center{
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+}
+#bg-green{
+	background-color:green;
+}
+.right{
+	text-align:right;
+}
