--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,16 @@
 	margin-bottom:20px;
 	border-spacing:1px;
 }
+.center{
+	text-align:center;
+}
 td{
 	padding:1px;
 	border:1px solid black;
 	/* width:10px; */
 	height:10px;
 }
-#bg-blue{
+.bg-blue{
 	background-color:blue;
 	
 }
@@ -20,7 +23,7 @@ td{
 	margin-left:auto;
 	margin-right:auto;
 }
-#bg-green{
+.bg-green{
 	background-color:green;
 }
 .right{
